gl33-master/src/test/deca/context/invalid/other/declarationFausseVoid.deca
/*
Test sur la déclaration fausse de void.

Attention : si le fichier est modifié, il faut le vérifier à nouveau et
copier la sortie dans src/test/deca/invalid/others/expected
*/

{
  voud a;
}
